yaml/quiz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"mongodb"}]'
  creationTimestamp: null
  labels:
    app: quiz
    app.kubernetes.io/part-of: quiz
  name: quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: quiz
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: quiz
    spec:
      containers:
      - image: ghcr.io/kwkoo/kahoot-clone:0.1
        name: kahoot-clone
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
status: {}
---
kind: Service
apiVersion: v1
metadata:
  name: quiz
  labels:
    app: quiz
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deployment: quiz
  type: ClusterIP
  sessionAffinity: None
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mongodb
    app.kubernetes.io/part-of: quiz
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: mongodb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: mongodb
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mongodb
      containers:
      - image: mongo:4.4.6
        name: mongo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /data/db
        resources: {}
status: {}
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
    - name: 27017-tcp
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    deployment: mongodb
  type: ClusterIP
  sessionAffinity: None
status: {}
